deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: euler-copilot
spec:
  type: ClusterIP #暴露端口，可使用NodePort，也可使用Ingress
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
      #nodePort: 30000
